fix care-tracker data overflow ui issue. fix care-tracker-item type mismatch

--- a/src/main/frontend/src/record/tracker/careTracker/components/careTrackerItemData/_careTrackerItemData.scss
+++ b/src/main/frontend/src/record/tracker/careTracker/components/careTrackerItemData/_careTrackerItemData.scss
@@ -1,6 +1,7 @@
 .care-tracker-item-data {
 	position: relative;
-	width: 128px;
+	min-width: 128px;
+	max-width: 256px;
 
 	border: 2px solid var(--color-neutral-light-grey);
 	border-radius: 8px;
@@ -12,7 +13,10 @@
 	.display-value {
 		@include juno-font-body;
 		font-weight: bold;
+		text-align: center;
 		padding-top: 4px;
+		width: 100%;
+		overflow: auto;
 	}
 	i {
 		position: absolute;
